<resources>
    <string name="app_name">Simple News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_news_list">Show News List</string>
    <string name="politics">时政</string>
    <string name="international">国际</string>
    <string name="finance">金融</string>
    <string name="collection">收藏</string>
    <string name="profile">我的</string>
</resources>
